style: fix overflow preview code

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -78,4 +78,22 @@
   .shiki {
     @apply p-5 rounded-xl overflow-x-auto;
   }
+  ::-webkit-scrollbar {
+  @apply w-2 h-1
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 }
